# oncocite-langchain

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_CHECKLIST.md  COMPARISON.md  Dockerfile  LICENSE  README.md  client.py  docker-compose.yml  pyproject.toml  requirements.txt  run_extraction.py
config/: __init__.py  settings.py
data/: validation_summary.json
data/adjudication/: packet.csv  packet.md
frontend/: DEPLOYMENT.md  README.md  package-lock.json  package.json  vitest.config.js
frontend/server/: index.cjs  production.cjs
frontend/src/: App.css  App.jsx  App.test.jsx  KnowledgeGraph.css  KnowledgeGraphViews.jsx  LandingPage.css  LandingPage.jsx  ResearchContext.jsx  knowledgeGraph.js  setupTests.js
frontend/src/utils/: normalize.js
graphs/: __init__.py  extraction_graph.py  prompts.py  reader_graph.py  state.py
hooks/: __init__.py  logging_callbacks.py
mcp_server/: __init__.py  __main__.py  server.py
pipelines/: README.md
pipelines/nextflow/: oncocite.nf
pipelines/snakemake/: Snakefile
runtime/: __init__.py  checkpointing.py  llm.py  map_reduce.py  retry.py  visualization.py
scripts/: aggregate_validation_metrics.py  enrich_extractions.py  expert_adjudication.py  generate_eda_figures.py  normalize_civic_corpus.py  publish_normalized_release.sh  resume_from_reader.py  run_extraction.py  run_three_way_analysis.py  test_reader_modes.py
skills/: README.md  oncocite.skill.json
test/: debug_Critic_response.txt  debug_Extractor_response.txt  debug_Normalizer_response.txt  debug_Planner_response.txt
test_paper/: README.md
test_paper/prospective/Dutta_et_al-2024-Blood_Neoplasia/: Dutta_et_al-2024-Blood_Neoplasia_extraction.json
test_paper/prospective/Elnaggar_et_al/: Elnaggar_et_al_extraction.json
test_paper/prospective/Restrepo_et_al_selinexor/: Restrepo_et_al_selinexor_extraction.json
test_paper/prospective/s41591-023-02491-5/: s41591-023-02491-5_extraction.json
test_paper/prospective/s43018-023-00625-9/: s43018-023-00625-9_extraction.json
test_paper/triplet/PMID_11050000/: PMID_11050000_extraction.json  PMID_11050000_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_12483530/: PMID_12483530_extraction.json  PMID_12483530_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_15339850/: PMID_15339850_extraction.json  PMID_15339850_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_16091734/: PMID_16091734_extraction.json  PMID_16091734_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_18528420/: PMID_18528420_extraction.json  PMID_18528420_ground_truth.json  analysis.regenerated.json
test_paper/triplet/PMID_19381019/: PMID_19381019_extraction.json  PMID_19381019_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_23480694/: PMID_23480694_extraction.json  PMID_23480694_ground_truth.json  analysis.json  analysis.regenerated.json
test_paper/triplet/PMID_23612012/: analysis.json  (+3 more)
tests/: __init__.py  test_e2e_demo.py
tools/: __init__.py  context.py  extraction_tools.py  normalization_tools.py  paper_content_tools.py  paper_tools.py  schemas.py  tool_registry.py  validation_tools.py
(+8 files in other folders)
