[project]
name = "oncocite-langchain"
version = "1.0.0"
description = "OncoCITE — LangChain/LangGraph implementation of the multi-agent CIViC evidence extraction pipeline (companion code for the OncoCITE manuscript)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mujahid Quidwai" },
    { name = "Santiago Thibaud" },
    { name = "Dennis Shasha" },
    { name = "Sundar Jagannath" },
    { name = "Samir Parekh" },
    { name = "Alessandro Laganà" },
]
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langgraph[sqlite]>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # OpenAI-compatible client (for vLLM / Fireworks / other LangChain-compatible providers)
    "openai>=1.0.0",
    # Model Context Protocol — 22 tools per Supplementary Table S15
    "mcp>=1.0.0",
    # Async HTTP
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # PDF processing (Reader phase)
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    # Data handling
    "pydantic>=2.0.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pandas>=3.0.2",
    "anthropic[bedrock]>=0.94.1",
    "boto3>=1.42.89",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Ali-Maq/oncocite-langchain"
Paper = "https://doi.org/10.21203/rs.3.rs-9160944/v1"

[project.scripts]
oncocite-extract = "run_extraction:main"
oncocite-mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphs", "runtime", "config", "tools", "hooks", "mcp_server"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
